chore: add favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Omelette Recipe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="./images/favicon-32x32.png">
 </head>
 <body>
     <main class="main">
@@ -12,7 +16,7 @@
             <img src="./images/image-omelette.jpeg" alt="">
 
             <h1>Simple Omelette Recipe</h1>
-            <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with you choice of cheese, vegetables and meats.
+            <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables and meats.
             </p>
         </section>
         <!-- Preparation time -->
@@ -21,9 +25,9 @@
                 <h4>Preparation Time</h4>
 
                 <ul>
-                    <li><b>Total:</b><small>Approximately 10 mins</small></li>                
-                    <li><b>Preparation:</b><small>5 minutes</small></li>                
-                    <li><b>Cooking:</b><small>5 minutes</small></li>                
+                    <li><b>Total: </b><small>Approximately 10 mins</small></li>                
+                    <li><b>Preparation: </b><small>5 minutes</small></li>                
+                    <li><b>Cooking: </b><small>5 minutes</small></li>                
                 </ul>
             </div>
         </section>
@@ -42,12 +46,12 @@
             <h3>Instructions</h3>
 
             <ol>
-                <li><b>Beat the eggs:</b>In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
-                <li><b> Heat the pan:</b> Place a non-stick frying pan over medium heat and add butter or oil.</li>
-                <li><b>Cook the omelette:</b>Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
-                <li><b>Add fillings (optional):</b>When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
-                <li><b>Fold and serve:</b>As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
-                <li><b>Enjoy:</b>Serve hot, with additional salt and pepper if needed.</li>
+                <li><b>Beat the eggs: </b>In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
+                <li><b> Heat the pan: </b> Place a non-stick frying pan over medium heat and add butter or oil.</li>
+                <li><b>Cook the omelette: </b>Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
+                <li><b>Add fillings (optional): </b>When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
+                <li><b>Fold and serve: </b>As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
+                <li><b>Enjoy: </b>Serve hot, with additional salt and pepper if needed.</li>
             </ol>
             <br>
             <hr>
